--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,14 @@ steps:
     npm run build
   displayName: 'npm install and build'
   
-- task: CopyFiles@2
+- task: ArchiveFiles@2
   inputs:
-    Contents: '**'
-    TargetFolder: '$(build.artifactstagingdirectory)'
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
+
 
 - task: PublishBuildArtifacts@1
   inputs:
