--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
     replaceExistingArchive: true
 
 
-- task: PublishBuildArtifacts@1
+- task: PublishPipelineArtifact@0
   inputs:
     ArtifactName: 'new'
     TargetPath: '$(Build.ArtifactStagingDirectory)'
