--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,6 @@
 trigger:
 - master
 
-variables:
-  uiSource: 'src'
-  uiBuild: '$(uiSource)/build'
-
 pool:
   vmImage: ubuntu-latest
 
@@ -20,21 +16,11 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    pushd $(uiSource)
     npm install
     npm run build
-    popd
   displayName: 'npm install and build'
   
-- task: ArchiveFiles@2
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
   inputs:
-    rootFolderOrFile: '$(uiBuild)'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
-    
-- task: PublishPipelineArtifact@0
-  inputs:
-    ArtifactName: 'new'
-    TargetPath: '$(Build.ArtifactStagingDirectory)'
+    PathtoPublish: build
