--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "jspdf": "2.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
